[Update] タスク編集機能追加前

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,4 +1,6 @@
-/* Your app styles here */
+@import url('https://fonts.googleapis.com/css?family=M+PLUS+1p');
+body { font-family: "M PLUS 1p" };
+
 .preloader {
   margin-left: 10px;
 }
